# thinkingcap

./: .gitignore  Muse_v2.proto  README.md  concentration.pkl  data_file.txt  local_connection.py  local_connection_BLE.py  local_connection_serial.py  local_osc.py  notes.txt  oscserver.py  pyproject.toml  rawEEG_rawFFT_blinkClenchForehead.JSON  test_conn.py  test_osc.py
3d_models/: BossBotBox Lower Lid.gcode  BossBotBox Lower Lid.stl  BossBotBox Lower Shell.3mf  BossBotBox Lower Shell.gcode  BossBotBox Lower Shell.stl  Feather Brace.gcode  Feather Brace.stl  Thinking Cap v2.3mf  Thinking Cap v2.gcode  Thinking Cap v2.stl
Muse Docs/: Thinking cap proposal.docx
ard/: ard.ino
bossBotBox/: bossBotBox.ino
bossBoxBot/: bossBoxBot.ino
final_code/central/: local_connection_BLE.py
inTheCap/: inTheCap.ino
inTheCapBLE/: inTheCapBLE.ino
inTheCapBLEPrev/: inTheCapBLEPrev.ino
muselab_config_files/: thinking_cap_config.json
references/: data_file.csv  dummy_osc.py  pygatt.py  send_serial_rec_bluart.py  serial_conn_demo.py  uart.py
references/IR_feather/: IR_feather.ino
references/ble_comms/: ble_comms.ino
references/ble_comms_2/: ble_comms_2.ino
references/bleuart_available/: bleuart_available.ino
references/nonBlockingVibe/: nonBlockingVibe.ino
references/sketch_dec16a/: sketch_dec16a.ino
references/sketch_jan03a/: sketch_jan03a.ino
references/sketch_jan03b/: sketch_jan03b.ino
references/sketch_jan04a/: sketch_jan04a.ino
serial_version/: local_connection_serial.py
sketch_dec16a/: sketch_dec16a.ino
sketch_jan01a/: sketch_jan01a.ino
(+7 files in other folders)
