[tool.poetry]
name = "thinkingcap"
version = "0.1.0"
description = "Pcomp 2019 final project."
authors = ["Stuart Leitch <Toruitas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyserial = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
