[tool.poetry]
name = "thinkingcap"
version = "0.1.0"
description = ""
authors = ["Stuart Leitch <toruitas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygatt = "^4.0.5"
python-osc = "^1.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
