[tool.poetry]
name = "thinkingcap"
version = "0.6.1"
description = ""
authors = ["Stuart Leitch <toruitas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygatt = "^4.0.5"
python-osc = "^1.7.4"
Adafruit-BluefruitLE = "^0.9.10"
dbus-python = "^1.2.12"
PyGObject = "^3.34.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
